# Triangle

./: LICENSE  Porting_guide.md  README.md
LICENSES/: Triangle-license.txt  cc-by-sa-4.0.txt
patch/: newSPLocation.h.patch  triangle.c.patch  triangle.c.patch-x  triangle.h.patch
src/: CMakeLists.txt  Triangle.sln
src/Triangle/: CMakeLists.txt  Triangle.vcxproj  Triangle.vcxproj.filters  acute.c  acute.h  acute_internal.h  eps_writer.c  eps_writer.h  newSPLocation.h  newSPLocation.h.patch  predicates.c  predicates.h  triangle.c  triangle.c.patch  triangle.h  triangle_api.c  triangle_api.h  triangle_config.h  triangle_core.h  triangle_helper.c  triangle_internal.h  triangle_io.c  triangle_version.h.in  util.h
src/Triangle/private/: acute.h  acute_internal.h  eps_writer.h  predicates.h  triangle_helper.h  triangle_internal.h
src/cmake/: TriangleConfig.cmake  cmake_uninstall.cmake.in
src/examples/: CMakeLists.txt
src/examples/libtriangle/: CMakeLists.txt  libtriangle.vcxproj  libtriangle.vcxproj.filters  triangle_api.c  triangle_api.h  triangle_helper.c  triangle_helper.h
src/examples/triangle-cli/: CMakeLists.txt  README.txt  main.c  triangle-cli.vcxproj  triangle-cli.vcxproj.filters  util.c  util.h
src/examples/triangle-test/: CMakeLists.txt  main.c  tests.c  tests.h  triangle-test.vcxproj  triangle-test.vcxproj.filters  util.c  util.h
